# blacklist_rf

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: parse_ripe_db.yml  (+4 more)
config/: asn_blacklist.txt  asn_whitelist.txt  patterns.txt  rkn_collaborants.txt  vk_exclude_patterns.txt  vk_patterns.txt  whitelist_patterns.txt
data/: all-ru-asn.txt  all-ru-ipv4.txt  all-ru-ipv6.txt  all-ru.txt
output/: blacklist-v4.conf  blacklist-v4.ipset  blacklist-v4.nft  blacklist-v4.routes  blacklist-v4.txt  blacklist-v6.conf  blacklist-v6.ipset  blacklist-v6.nft  blacklist-v6.routes  blacklist-v6.txt  blacklist-vk-v4.ipset  blacklist-vk-v4.nft  blacklist-vk-v4.routes  blacklist-vk-v4.txt  blacklist-vk-v6.ipset  blacklist-vk-v6.nft  blacklist-vk-v6.routes  blacklist-vk.nft  blacklist-vk.txt  blacklist-vk.yaml  blacklist.conf  blacklist.json  blacklist.nft  blacklist.txt  blacklist.yaml  blacklist_with_comments.txt  rkn-collaborants-v4.conf  rkn-collaborants-v4.ipset  rkn-collaborants-v4.nft  rkn-collaborants-v4.routes  rkn-collaborants-v4.txt  rkn-collaborants-v6.conf  rkn-collaborants-v6.ipset  rkn-collaborants-v6.nft  rkn-collaborants-v6.routes  rkn-collaborants-v6.txt  rkn-collaborants.conf  rkn-collaborants.nft  rkn-collaborants.txt  rkn-collaborants.yaml  (+1 more)
scripts/: check_nft_blacklist.py  export_formats.py  fetch_ripe_data.py  generate_blacklist.py  network_list_from_as.py  network_list_from_netname.py  parse_ripe_db.py  resolve_descriptions.py  update_all.py
tests/: test_check_nft_blacklist.py  test_exporters.py  test_ip_utils.py  test_parse_ripe_db.py
(+7 files in other folders)
