[project]
name = "blacklist-rf"
version = "0.1.0"
description = "IP blacklist generator for Russian government networks"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]
